--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/images/swbt_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css">
-    <title>SWBT | Reporheld</title>
+    <title>SWBT | Reportheld</title>
   </head>
   <body>
     <div id="root"></div>
